@@ -1,5 +1,10 @@
 2024-10-17  Dmitry V. Levin  <ldv at owl.openwall.com>
 
+	pam_tcb: Do not use deprecated _pam_overwrite macro.
+	* pam_tcb/support.h (pam_tcb_overwrite_string): New macro.
+	(_pam_delete): Replace _pam_overwrite with pam_tcb_overwrite_string.
+	* pam_tcb/pam_unix_passwd.c (pam_sm_chauthtok): Likewise.
+
 	pam_tcb: Use _pam_delete in the compat implementation of pam_prompt.
 	* pam_tcb/compat.c (pam_prompt): Use _pam_delete instead of
 	_pam_overwrite followed by _pam_drop.
